# ml-guard

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.ci.yml  docker-compose.yml  validation.sh
.github/workflows/: ci.yml
backend/: Dockerfile.smoke  requirements.txt
backend/app/: main.py  worker.py
backend/app/api/: __init__.py  alerts.py  costs.py  drift.py  events.py  metrics.py  projects.py
backend/app/core/: config.py
backend/app/db/: models.py
backend/app/services/: alerts.py  costs.py  drift.py  metrics.py  slack.py
backend/demo/: quickstart.py
dashboard/: Dockerfile  app.py
demo/: quickstart.py
sdk/: pyproject.toml
sdk/ml_guard/: __init__.py  client.py
