[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-guard"
version = "0.1.0"
description = "Python SDK for ML-Guard"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["ml_guard*"]
